# rusty-nv

./: .gitignore  Cargo.toml  README.md  build.rs  installer.iss
.github/workflows/: ci.yml
packaging/linux/: group.theimmersive.RustNv.desktop  group.theimmersive.RustNv.metainfo.xml  group.theimmersive.RustNv.yml
packaging/macos/: Info.plist
src/: app.rs  export.rs  highlight.rs  highlighter.rs  import.rs  main.rs  markup.rs  note.rs  search.rs  shortcuts.rs  storage.rs  theme.rs
src/ui/: dialogs.rs  editor.rs  formatting.rs  mod.rs  note_list.rs  search_bar.rs  settings.rs  status_bar.rs
tests/: formatting_tests.rs  highlight_tests.rs  markup_tests.rs  note_tests.rs  search_tests.rs  storage_tests.rs  wiki_link_tests.rs
